--- a/app/assets/stylesheets/primero/custom_forms.scss
+++ b/app/assets/stylesheets/primero/custom_forms.scss
@@ -1,3 +1,7 @@
+////////////////////////////////////////////////
+// Form Customization
+////////////////////////////////////////////////
+
 .custom_forms {
   // TODO - Add styling for Form Customization
 
@@ -6,6 +10,11 @@
     padding: 0;
     li{
       padding: 10px 15px;
+    }
+    li.hidden_form a {
+      // TODO - This is temporary.
+      // Feel free to come up with better styling to indicate hidden forms
+      color: $red_color;
     }
   }
 }
