--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -7,11 +7,11 @@
         <%= render :partial => 'shared/fields', :locals => {:f => f, :fields => fields, :given_locale => I18n.default_locale} %>
       </div>
       <div class="translation_lang_panel">
-        <div class="lang_title <%= 'hide' if !@show_add_field.blank? %>" >
+        <div class="lang_title <%= 'hide' if @show_add_field.present? %>" >
           <%= t(:provide_translation) %>
           <span class="translation_lang_selected"></span>
         </div>
-        <%= render :partial => "shared/add_translations", :locals => {:fields => fields, :f => f, :show_drop_down => !@show_add_field.blank? }%>
+        <%= render :partial => "shared/add_translations", :locals => {:fields => fields, :f => f, :show_drop_down => @show_add_field.present? }%>
       </div>
       <div class="clearfix"></div>
       <% if f.object_name == 'field' and @field.type == 'select_box' %>
