--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -26,14 +26,7 @@
 <input type="hidden" id="move_url" value="<%= change_form_form_section_fields_path(@form_section) %>">
 <input type="hidden" id="save_order_url" value="<%= save_order_form_section_fields_path(@form_section) %>">
 
-<%
-  #TODO - RESOLVE THIS
-  # The list_table id is needed to clean up the table styling issue at the bottom
-  # Determine if / why form_sections id is needed
-  # If it is needed, make it work
-  #<table id="list_table" class="list_table">
-%>
-<table id="form_sections" class="list_table">
+<table id="list_table" class="list_table">
   <thead>
     <tr>
       <th><%= t("name") %></th>
@@ -50,36 +43,33 @@
         <tr data="<%= field.name %>" class="<%= field.visible? ? "rowEnabled" : "rowDisabled" %>">
           <td><%= field.display_name %></td>
           <td><%= field.help_text %></td>
-          <td><%= field.option_strings unless field.option_strings.empty? %></td>
+          <td>
+              <% #TODO - HANDLE LOOKUPS%>
+              <%= field.option_strings unless field.option_strings.empty? %>
+          </td>
           <td><%= field.type.try(:humanize) %></td>
-          <% if @form_section.editable? %>
-            <td align="center">
-              <% if field.editable? %>
-                <%= check_box_tag "fields[]", field.name, !field.visible? , {:id => "fields_#{field.name}", :class => "field_hide_show"} %>
-              <% end %>
-            </td>
-          <% else %>
-             <td align="center"> </td>
-          <% end %>
-          <% if @form_section.editable? %>
-            <td class='field-buttons'>
-              <% if field.editable? %>
-                <a href="javascript:void(0)" class="link_moveto"><%= t("fields.move_to") %></a>
-                <%= link_to t("buttons.edit"), edit_form_section_field_path(:form_section_id => @form_section.unique_id, :id => field.name), :id => "#{field.name}_edit" %>
-                <%= render :partial => "form_section/delete_button", :locals => {:field => field, :url => delete_form_section_fields_path(@form_section.unique_id),
+          <td align="center">
+            <% if @form_section.editable? && field.editable? %>
+              <%= check_box_tag "fields[]", field.name, !field.visible? , {:id => "fields_#{field.name}", :class => "field_hide_show"} %>
+            <% end %>
+          </td>
+          <td class='field-buttons'>
+            <% if @form_section.editable? && field.editable? %>
+              <%= link_to t("buttons.edit"), edit_form_section_field_path(:form_section_id => @form_section.unique_id, :id => field.name), :id => "#{field.name}_edit" %>
+              <%= render :partial => "form_section/delete_button", :locals => {:field => field, :url => delete_form_section_fields_path(@form_section.unique_id),
                                                                      :warning => I18n.t("messages.warning")} %> <%= hidden_field_tag "field_name" "#{field.name}" %>
-                <div class="move_to_panel hide">
+              <a href="javascript:void(0)" class="link_moveto"><%= t("fields.move_to") %></a>
+              <% if @forms_for_move.present? %>
+              <div class="move_to_panel hide">
                   <%= form_tag change_form_form_section_fields_path(@form_section), :html => {:method => :post} do -%>
                     <input type='hidden' name='id' value='<%= field.name %>' style="display:none;"/>
                     <input type='hidden' class="destination_form_id" name='destination_form_id' style="display:none;"/>
                   <% end %>
-                  <%= select_tag "#{field.name}_destination_form_id", options_for_select(forms_for_display, @form_section.unique_id), :class => "field_location"%>
+                  <%= select_tag "#{field.name}_destination_form_id", options_for_select(@forms_for_move, @form_section.unique_id), :class => "field_location"%>
                 </div>
-              <% end %>
-            </td>
-          <% else %>
-            <td class='field-buttons'> </td>
-          <% end %>
+                <% end %>
+            <% end %>
+          </td>
         </tr>
       <% end %>
     <% end %>
