--- a/app/views/form_section/edit.html.erb
+++ b/app/views/form_section/edit.html.erb
@@ -14,7 +14,7 @@
     <div class="page-content-new form_page">
       <div class="side-tab-content full_width">
         <%= render :partial => "form_section/new_or_edit_form_section" %>
-         <%= render :partial => "form_section/edit_fields"%>
+        <%= render :partial => "form_section/edit_fields"%>
       </div>
     </div>
   </div>
@@ -23,4 +23,7 @@
 <script>
     var show_add_field = <%= show_add_field ||= (params[:show_add_field] || false) %>;
     var field_type = "<%= @field.type || 'text_field' %>";
+    if(show_add_field){
+      $("#add_field_modal").foundation('reveal', 'open');
+    }
 </script>
