--- a/app/views/form_section/index.html.erb
+++ b/app/views/form_section/index.html.erb
@@ -24,7 +24,7 @@
   <div class="large-12 medium-12 columns custom_forms">
     <ul>
       <% @form_sections.each do |form_group, forms| %>
-        <%= build_form_custom_list(form_group, forms) %>
+        <%= build_form_custom_list(form_group, forms, @primero_module, @parent_form) %>
       <% end %>
     </ul>
   </div>
