--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -74,7 +74,7 @@
         <div class="translation_lang_panel">
           <div class="row">
             <div class="medium-12 columns">
-              <%= render :partial => "shared/add_translations", :locals => {:fields => [{:name => :text_field}, {:description => :text_field}, {:help_text => :text_field}], :f => f, :show_drop_down => true} %>
+              <%= render :partial => "form_section/add_translations", :locals => {:fields => [{:name => :text_field}, {:description => :text_field}, {:help_text => :text_field}], :f => f, :show_drop_down => true} %>
             </div>
           </div>
         </div>
