--- a/app/views/children/_summary_row.html.erb
+++ b/app/views/children/_summary_row.html.erb
@@ -6,8 +6,7 @@
       <% #content_tag(:div, nil, :class => 'flag reunited') if record.reunited? %>
       <% if record.flagged? && record.flag_count > 0 %>
         <div class="flag_icon">
-          <%= icon('bookmark fa-rotate-270') %>
-          <span><%= record.flag_count %></span>
+          <%= record.flag_count %>
         </div>
       <% end %>
     </td>
