--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -81,11 +81,18 @@
     <li><%= link_to t("fields.text_field"), "javascript:void(0)", :id => "text_field", :class => "field_links sel" %> </li>
     <li><%= link_to t("fields.text_area"), "javascript:void(0)", :id => "textarea", :class => "field_links" %></li>
     <li><%= link_to t("fields.check_box"), "javascript:void(0)", :id => "check_boxes", :class => "field_links" %></li>
+    <li><%= link_to t("fields.tick_box"), "javascript:void(0)", :id => "tick_box", :class => "field_links" %></li>
     <li><%= link_to t("fields.select_box"), "javascript:void(0)", :id => "select_box", :class => "field_links" %></li>
     <li><%= link_to t("fields.radio_button"), "javascript:void(0)", :id => "radio_button", :class => "field_links" %></li>
     <li><%= link_to t("fields.numeric_field"), "javascript:void(0)", :id => "numeric_field", :class => "field_links" %></li>
+    <li><%= link_to t("fields.tally_field"), "javascript:void(0)", :id => "tally_field", :class => "field_links" %></li>
     <li><%= link_to t("fields.date_field"), "javascript:void(0)", :id => "date_field", :class => "field_links" %></li>
     <li><%= link_to t("fields.date_range_field"), "javascript:void(0)", :id => "date_range", :class => "field_links" %></li>
+    <li><%= link_to t("fields.separator"), "javascript:void(0)", :id => "separator", :class => "field_links" %></li>
+    <%
+      #TODO - Add new fields
+      # subform
+    %>
   </ul>
 
   <% @field ||= Field.new(:type => 'text_field') %>
@@ -95,4 +102,10 @@
                           :message => t('form_section.messages.correct_errors') %>
   <%= render :partial => 'form_section/add_field', :locals => {:div_id => "field_details", :fields => [{:display_name => :text_field}, {:help_text => :text_area}] } %>
   <%= render :partial => 'form_section/add_field', :locals => {:div_id => "field_details_options", :fields => [{:display_name => :text_field}, {:help_text => :text_area}, {:option_strings_text => :text_area}] } %>  
+  <%
+    #TODO
+    # select field - handle lookups and multi-select (as tick_box)
+    # tally field
+    # subform - Do I want this here?  Or link to subforms on main index page?
+  %>
 </div>
