Fixed styling issues with forms that have errors and their action buttons, cleaned up styling of edit/cancel button, fixed select box background color

--- a/app/assets/stylesheets/primero/button.scss
+++ b/app/assets/stylesheets/primero/button.scss
@@ -5,7 +5,7 @@
 .green-button, .ui-button {
   color: $green_color !important;
   border: 1px solid $stroke_green_color !important;
-  font-family: 'Roboto-Medium', sans-serif !important;
+  font-family: 'Roboto', sans-serif !important;
   font-size: $thirteen_px !important;
   text-transform: uppercase;
   height: 37px;
