--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -35,8 +35,7 @@ input[type="submit"] {
 
 select:not([class^="ui-datepicker-"]), select:hover:not([class^="ui-datepicker-"]) {
   border: 1px solid $stroke_green_color;
-  background: #fff;
-  background: url(image_path("select_carot.png")) no-repeat;
+  background: #fff url(image_path("select_carot.png")) no-repeat;
   background-position: center right 10px;
   color: $grey_color;
   font-size: $thirteen_px;
@@ -184,7 +183,7 @@ fieldset {
     background: #FFD8D8;
     padding: 10px;
     border: 1px solid #F76F6F;
-    border-left: none;
+    margin: 0 15px 15px 15px;
 
     h2 {
       font-size: 1.3rem;
