Set max and min heights to popovers for guiding questions

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -116,10 +116,11 @@ p.help {
 
 .popover-content {
   padding: 2px 14px;
-  height: 180px;
   overflow: hidden;
   overflow-y: scroll;
   white-space: pre-line;
+  max-height: 180px;
+  min-height: 70px;
 }
 
 .summary_group {
