Changed padding for date fields in filters

--- a/app/assets/stylesheets/primero/scopes_filters.scss
+++ b/app/assets/stylesheets/primero/scopes_filters.scss
@@ -80,6 +80,10 @@ div.scope_bar {
     input[type="checkbox"] {
       margin: 0;
     }
+
+    .form_date_field {
+      padding: 3px;
+    }
   }
 
   h3 {
