fixed rspec related to refresh form properties in fields controller

--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -107,5 +107,6 @@
     # select field - handle lookups and multi-select (as tick_box)
     # tally field
     # subform - Do I want this here?  Or link to subforms on main index page?
+    # handle hidden text fields
   %>
 </div>
