--- a/app/views/incidents/_filter.html.erb
+++ b/app/views/incidents/_filter.html.erb
@@ -12,7 +12,7 @@
         { multi: true }) %>
     <% end %>
     <% if filters_to_show.include? 'Social Worker' %>
-      <%= build_filter_checkboxes(t("incidents.filter_by.social_worker"), 'users', @associated_users, { multi: true }, false) %>
+      <%= build_filter_checkboxes(t("incidents.filter_by.social_worker"), 'owned_by', @associated_users, { multi: true }, false) %>
     <% end %>
     <% if filters_to_show.include? 'Status' %>
       <%= build_filter_checkboxes(t("incidents.filter_by.status"), 'status', Lookup.values('Incident Status', @lookups)) %>
