PRIMERO-537 Clean up logs generated by the system.
Make the logs for the different services be located in the same directory,
by default all go to log directory (subdirectories nginx, solr, rails and couchdb).

The log for rails is defined by the environment variable "RAILS_LOG_PATH", the file name is
take from the environment variable RAILS_ENV, it can be production, development, etc.

Added monkey patch to be able to move the sunspot/solr log, the path file can be indicated
in the sunspot.yml file via 'log_file', but this variable is read by sunspot but it is ignored
when the server is being configured, so added monkey patch to make it happen the read.

--- a/cookbook/templates/default/nginx_site.erb
+++ b/cookbook/templates/default/nginx_site.erb
@@ -16,10 +16,12 @@ server {
 
   rails_env <%= @rails_env %>;
 
+  passenger_set_cgi_param RAILS_LOG_PATH "<%= @rails_log_path %>";
+
   gzip_disable "MSIE [1-6]\.";
   root <%= @current_path %>/public;
-  access_log <%= @current_path %>/log/server.log;
-  error_log <%= @current_path %>/log/error.log error;
+  access_log <%= @log_path %>/server.log;
+  error_log <%= @log_path %>/error.log error;
   client_max_body_size 50M;
 
   #Need to change this accordingly once we move to rails3.1
