--- a/cookbook/templates/default/sunspot.yml.erb
+++ b/cookbook/templates/default/sunspot.yml.erb
@@ -6,4 +6,7 @@
     log_level: <%= @log_levels[env] %>
     pid_dir: tmp/pids
     path: /solr/<%= env %>
+    <% if @log_files[env] %>
+    log_file: <%= @log_files[env] %>
+    <% end %>
 <% end %>
