--- a/cookbook/templates/default/couch_config.yml.erb
+++ b/cookbook/templates/default/couch_config.yml.erb
@@ -5,7 +5,8 @@
   port: 5984
   https_port: 6984
   prefix: primero
-  suffix: <%= env %>
+  <%# funky string stuff since ERB doesn't like nested tags %>
+  suffix: <%= "<" + "%= ENV['COUCH_SUFFIX'] || '#{env}' %" + ">" %>
   username: <%= @couchdb_username %>
   password: <%= @couchdb_password %>
 <% end %>
