hiding continuous integration to keep QA from testing it

--- a/app/views/replications/_form.html.erb
+++ b/app/views/replications/_form.html.erb
@@ -32,10 +32,10 @@
           <%= f.label :password, t("login.password.label"), :class=>'key'  %>
           <%= f.password_field :password, :autocomplete => "off" %>*
         </p>
-        <p>
-          <%= f.label :is_continuous, t("replication.is_continuous"), :class=>'key'  %>
-          <%= f.check_box :is_continuous, :autocomplete => 'off' %>
-        </p>
+        <%#<p>%>
+          <%#<%= f.label :is_continuous, t("replication.is_continuous"), :class=>'key'  %>%>
+          <%#<%= f.check_box :is_continuous, :autocomplete => 'off' %>%>
+        <%#</p>%>
       </fieldset>
     <% end %>
   </div>
