--- a/app/views/form_section/_subform.html.erb
+++ b/app/views/form_section/_subform.html.erb
@@ -4,8 +4,16 @@
      subform_section = subform.subform_section
      number_of_subforms = subforms_count formObject, subform, form_group_name
      collapsed_fields = subform_section.collapsed_list
+     shared_subform = ""
+     disable_action_buttons = ""
+     summary_section_class = ""
+     shared_subform = "data-is_shared_subform=true data-shared_subform=#{subform_section.shared_subform}" if subform_section.shared_subform.present?
+     if subform.subform_section.is_summary_section
+       disable_action_buttons = "style=display:none;"
+       summary_section_class = "summary_section"
+     end
    %>
-  <div class="subforms" id="<%= subform.name %>">
+  <div class="subforms <%=summary_section_class%>" id="<%= subform.name %>" <%=shared_subform%>>
     <% (number_of_subforms).times do |i| %>
     <div id="subform_container_<%= subform.name %>_<%= i %>" class="subform_container">
       <fieldset id="subform_<%= subform.name %>_<%= i %>" class="<%= subform.name %> subform no-border">
@@ -37,7 +45,7 @@
   </div>
 
   <%# Hidden subform template %>
-  <div id="subform_container_<%= subform.name %>_template" class="template" style="display:none;">
+  <div id="subform_container_<%= subform.name %>_template" class="template" style="display:none;" data-subform_index="">
     <fieldset id="subform_<%= subform.name %>_template" class="<%= subform.name %> subform no-border">
     <%= render partial: "form_section/subform_expand_collapse_header",
                object: formObject,
@@ -65,10 +73,10 @@
 
   <%# Add button %>
   <div>
-    <a id="subform_<%= subform.name %>_add_button" class="green-button subform_add right"><%= t('fields.add') %></a>
+    <a id="subform_<%= subform.name %>_add_button" class="green-button subform_add right" <%= disable_action_buttons %>><%= t('fields.add') %></a>
   </div>
   <%initial_subforms = subform_section[:initial_subforms] || 0%>
-  <% if initial_subforms > 0 && formObject.new_record? %>
+  <% if initial_subforms > 0 && formObject.new_record? && subform_section.shared_subform.blank?%>
     <% subform_section[:initial_subforms].times do %>
       <script>
         $(document).ready(function(){
