--- a/app/views/form_section/_fields.html.erb
+++ b/app/views/form_section/_fields.html.erb
@@ -1,8 +1,25 @@
+<%
+  lookups ||= []
+%>
 <fieldset>
   <% fields.each do |field_hash| %>
-    <div>
-      <label class="key"><%= t(field_hash.keys.first.to_sym, :locale => given_locale.to_sym) %></label>
-      <%= f.send "#{field_hash.values.first}", "#{field_hash.keys.first}_#{given_locale}".to_sym %>
-    </div>
+    <%
+      field_name = field_hash.keys.first
+      field_type = field_hash.values.first
+    %>
+    <% if field_type == :select_box %>
+      <%= render "form_section/add_select_box", lookups: lookups, fld: fld %>
+    <% elsif field_type == :tally_field %>
+      <%= render "form_section/add_tally_field" %>
+    <% else %>
+      <div class="row">
+        <div class="large-3 medium-3 columns">
+          <label class="key"><%= t(field_name.to_sym, :locale => given_locale.to_sym) %></label>
+        </div>
+        <div class="large-9 medium-9 columns">
+          <%= fld.send "#{field_type}", "#{field_name}_#{given_locale}".to_sym %>
+        </div>
+      </div>
+    <% end %>
   <% end %>
 </fieldset>
