commented out translation code due to tally and lookups bug.  WIP

--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -11,7 +11,7 @@
         <%= t(:provide_translation) %>
         <span class="translation_lang_selected"></span>
       </div>
-      <%= render :partial => "form_section/add_translations", :locals => {:fields => fields, :fld => fld, :show_drop_down => @show_add_field.present? }%>
+      <%# render :partial => "form_section/add_translations", :locals => {:fields => fields, :fld => fld, :show_drop_down => @show_add_field.present? }%>
     </div>
 
     <div class="clearfix"></div>
