--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -26,7 +26,7 @@
 <input type="hidden" id="move_url" value="<%= change_form_form_section_fields_path(@form_section) %>">
 <input type="hidden" id="save_order_url" value="<%= save_order_form_section_fields_path(@form_section) %>">
 
-<table id="list_table" class="list_table">
+<table id="list_table_2" class="list_table_2">
   <thead>
     <tr>
       <th><%= t("name") %></th>
