cleaned up passing of params to edit form section

--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -24,7 +24,7 @@
             <%= t("forms.initial_language") %> : <span><%= t("home.#{I18n.default_locale}") %></span>
           </div>
           <fieldset>
-            <%= hidden_field_tag "module_id", @module_id, :id => "form_section_parent_form" %>
+            <%= hidden_field_tag "module_id", @module_id, :id => "form_section_module_id" %>
             <%= hidden_field_tag "form_section[parent_form]", @parent_form, :id => "form_section_parent_form" %>
 
             <% unless @form_section.perm_enabled? %>
