--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -1,5 +1,6 @@
 <div id="<%= div_id %>" class="field_details" style="display:none;">
   <%= form_for @field, :url => url_for_form_section_field(@form_section.unique_id, @field)  do |fld| %>
+    <%= hidden_field_tag "module_id", @module_id, :id => "field_module_id" %>
     <div class="default_lang_panel">
       <div class="lang_title">
         <%= t("forms.initial_language") %> : <%= t("home.#{I18n.default_locale}") %>
