--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -21,65 +21,72 @@
   </div>
 </div>
 
-<input type="hidden" id="toggle_url" value="<%= toggle_fields_form_section_fields_path(@form_section) %>">
-<input type="hidden" id="edit_url" value="<%= edit_form_section_path(@form_section) %>">
-<input type="hidden" id="move_url" value="<%= change_form_form_section_fields_path(@form_section) %>">
-<input type="hidden" id="save_order_url" value="<%= save_order_form_section_fields_path(@form_section) %>">
+<div class="row">
+  <div class="large-12 medium-12 columns">
+    <input type="hidden" id="toggle_url" value="<%= toggle_fields_form_section_fields_path(@form_section) %>">
+    <input type="hidden" id="edit_url" value="<%= edit_form_section_path(@form_section) %>">
+    <input type="hidden" id="move_url" value="<%= change_form_form_section_fields_path(@form_section) %>">
+    <input type="hidden" id="save_order_url" value="<%= save_order_form_section_fields_path(@form_section) %>">
 
-<table id="list_table_2" class="list_table_2">
-  <thead>
-    <tr>
-      <th><%= t("name") %></th>
-      <th><%= t("help_text") %></th>
-      <th><%= t("form_section.options") %></th>
-      <th><%= t("fields.type") %></th>
-      <th align="center"><%= t("form_section.hide") %></th>
-      <th align="center">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @form_section.fields.each do |field| %>
-      <% unless field.new? %>
-        <tr data="<%= field.name %>" class="<%= field.visible? ? "rowEnabled" : "rowDisabled" %>">
-          <td>
-            <% if field.type == 'subform' %>
-              <%= link_to field.display_name, edit_form_section_path(field.subform_section_id, module_id: @primero_module, parent_form: @parent_form) %>
-            <% else %>
-              <%= field.display_name %>
-            <% end %>
-          </td>
-          <td><%= field.help_text %></td>
-          <td>
-            <%= field_value_for_display(field.options_list(@lookups)) %>
-          </td>
-          <td><%= field.type.try(:humanize) %></td>
-          <td align="center">
-            <% if @form_section.editable? && field.editable? %>
-              <%= check_box_tag "fields[]", field.name, !field.visible? , {:id => "fields_#{field.name}", :class => "field_hide_show"} %>
-            <% end %>
-          </td>
-          <td class='field-buttons'>
-            <% if @form_section.editable? && field.editable? %>
-              <%= link_to t("buttons.edit"), edit_form_section_field_path(:form_section_id => @form_section.unique_id, :id => field.name), :id => "#{field.name}_edit" %>
-              <%= render :partial => "form_section/delete_button", :locals => {:field => field, :url => delete_form_section_fields_path(@form_section.unique_id),
-                                                                     :warning => I18n.t("messages.warning")} %> <%= hidden_field_tag "field_name" "#{field.name}" %>
-              <a href="javascript:void(0)" class="link_moveto"><%= t("fields.move_to") %></a>
-              <% if @forms_for_move.present? %>
-              <div class="move_to_panel hide">
-                  <%= form_tag change_form_form_section_fields_path(@form_section), :html => {:method => :post} do -%>
-                    <input type='hidden' name='id' value='<%= field.name %>' style="display:none;"/>
-                    <input type='hidden' class="destination_form_id" name='destination_form_id' style="display:none;"/>
-                  <% end %>
-                  <%= select_tag "#{field.name}_destination_form_id", options_for_select(@forms_for_move, @form_section.unique_id), :class => "field_location"%>
-                </div>
-                <% end %>
-            <% end %>
-          </td>
+    <table id="list_table_2" class="list_table_2">
+      <thead>
+        <tr>
+          <th><%= t("name") %></th>
+          <th><%= t("help_text") %></th>
+          <th><%= t("form_section.options") %></th>
+          <th><%= t("fields.type") %></th>
+          <th align="center"><%= t("form_section.hide") %></th>
+          <th align="center">Actions</th>
         </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
+      <tbody>
+        <% @form_section.fields.each do |field| %>
+          <% unless field.new? %>
+            <tr data="<%= field.name %>" class="<%= field.visible? ? "rowEnabled" : "rowDisabled" %>">
+              <td>
+                <% if field.type == 'subform' %>
+                  <%= link_to field.display_name, edit_form_section_path(field.subform_section_id, module_id: @primero_module) %>
+                <% else %>
+                  <%= field.display_name %>
+                <% end %>
+              </td>
+              <td><%= field.help_text %></td>
+              <td>
+                <%= field_value_for_display(field.options_list(@lookups)) %>
+              </td>
+              <td><%= field.type.try(:humanize) %></td>
+              <td align="center">
+                <% if @form_section.editable? && field.editable? %>
+                  <%= check_box_tag "fields[]", field.name, !field.visible? , {:id => "fields_#{field.name}", :class => "field_hide_show"} %>
+                <% end %>
+              </td>
+              <td class='field-buttons'>
+                <% if @form_section.editable? && field.editable? %>
+                  <%= link_to t("buttons.edit"),
+                              edit_form_section_field_path(form_section_id: @form_section.unique_id, id: field.name, module_id: @module_id),
+                              :id => "#{field.name}_edit"
+                  %>
+                  <%= render :partial => "form_section/delete_button", :locals => {:field => field, :url => delete_form_section_fields_path(@form_section.unique_id),
+                                                                         :warning => I18n.t("messages.warning")} %> <%= hidden_field_tag "field_name" "#{field.name}" %>
+                  <a href="javascript:void(0)" class="link_moveto"><%= t("fields.move_to") %></a>
+                  <% if @forms_for_move.present? %>
+                  <div class="move_to_panel hide">
+                      <%= form_tag change_form_form_section_fields_path(@form_section), :html => {:method => :post} do -%>
+                        <input type='hidden' name='id' value='<%= field.name %>' style="display:none;"/>
+                        <input type='hidden' class="destination_form_id" name='destination_form_id' style="display:none;"/>
+                      <% end %>
+                      <%= select_tag "#{field.name}_destination_form_id", options_for_select(@forms_for_move, @form_section.unique_id), :class => "field_location"%>
+                    </div>
+                     <% end %>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 <div id="add_field_modal" class="reveal-modal" data-reveal>
   <a class="close-reveal-modal">&#215;</a>
