--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -91,19 +91,23 @@
 <div id="add_field_modal" class="reveal-modal" data-reveal>
   <a class="close-reveal-modal">&#215;</a>
   <ul class="field_types clearfix">
-    <li><%= link_to t("fields.text_field"), "javascript:void(0)", :id => "text_field", :class => "field_links sel" %> </li>
-    <li><%= link_to t("fields.text_area"), "javascript:void(0)", :id => "textarea", :class => "field_links" %></li>
-    <li><%= link_to t("fields.check_box"), "javascript:void(0)", :id => "check_boxes", :class => "field_links" %></li>
-    <li><%= link_to t("fields.tick_box"), "javascript:void(0)", :id => "tick_box", :class => "field_links" %></li>
-    <li><%= link_to t("fields.select_box"), "javascript:void(0)", :id => "select_box", :class => "field_links" %></li>
-    <li><%= link_to t("fields.radio_button"), "javascript:void(0)", :id => "radio_button", :class => "field_links" %></li>
-    <li><%= link_to t("fields.numeric_field"), "javascript:void(0)", :id => "numeric_field", :class => "field_links" %></li>
-    <li><%= link_to t("fields.tally_field"), "javascript:void(0)", :id => "tally_field", :class => "field_links" %></li>
-    <li><%= link_to t("fields.date_field"), "javascript:void(0)", :id => "date_field", :class => "field_links" %></li>
-    <li><%= link_to t("fields.date_range_field"), "javascript:void(0)", :id => "date_range", :class => "field_links" %></li>
-    <li><%= link_to t("fields.separator"), "javascript:void(0)", :id => "separator", :class => "field_links" %></li>
-    <% unless @form_section.is_nested %>
-      <li><%= link_to t("fields.subform"), "javascript:void(0)", :id => "subform", :class => "field_links" %></li>
+    <% if @field.present? && @field.type.present? %>
+      <li><%= link_to t("fields.#{@field.type}"), "javascript:void(0)", :id => "#{@field.type}", :class => "field_links sel" %> </li>
+    <% else %>
+      <li><%= link_to t("fields.text_field"), "javascript:void(0)", :id => "text_field", :class => "field_links sel" %> </li>
+      <li><%= link_to t("fields.text_area"), "javascript:void(0)", :id => "textarea", :class => "field_links" %></li>
+      <li><%= link_to t("fields.check_box"), "javascript:void(0)", :id => "check_boxes", :class => "field_links" %></li>
+      <li><%= link_to t("fields.tick_box"), "javascript:void(0)", :id => "tick_box", :class => "field_links" %></li>
+      <li><%= link_to t("fields.select_box"), "javascript:void(0)", :id => "select_box", :class => "field_links" %></li>
+      <li><%= link_to t("fields.radio_button"), "javascript:void(0)", :id => "radio_button", :class => "field_links" %></li>
+      <li><%= link_to t("fields.numeric_field"), "javascript:void(0)", :id => "numeric_field", :class => "field_links" %></li>
+      <li><%= link_to t("fields.tally_field"), "javascript:void(0)", :id => "tally_field", :class => "field_links" %></li>
+      <li><%= link_to t("fields.date_field"), "javascript:void(0)", :id => "date_field", :class => "field_links" %></li>
+      <li><%= link_to t("fields.date_range_field"), "javascript:void(0)", :id => "date_range", :class => "field_links" %></li>
+      <li><%= link_to t("fields.separator"), "javascript:void(0)", :id => "separator", :class => "field_links" %></li>
+      <% unless @form_section.is_nested %>
+        <li><%= link_to t("fields.subform"), "javascript:void(0)", :id => "subform", :class => "field_links" %></li>
+      <% end %>
     <% end %>
   </ul>
 
