added back translation for edit field

--- a/app/views/form_section/_add_tally_field.html.erb
+++ b/app/views/form_section/_add_tally_field.html.erb
@@ -1,4 +1,5 @@
 <%
+  #TODO - We need to think about adding translations for tally field values
   if @field.present? && @field.tally.present?
     tally1 = @field.tally.first || ""
     tally2 = @field.tally.second || ""
