--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -5,14 +5,14 @@
       <div class="lang_title">
         <%= t("forms.initial_language") %> : <%= t("home.#{I18n.default_locale}") %>
       </div>
-      <%= render :partial => 'form_section/fields', :locals => {:fld => fld, :fields => fields, :given_locale => I18n.default_locale, :lookups => @lookups} %>
+      <%= render :partial => 'form_section/fields', :locals => {:fld => fld, :fields => fields, :given_locale => I18n.default_locale, :lookups => @lookups, :is_translation => false} %>
     </div>
     <div class="translation_lang_panel">
       <div class="lang_title <%= 'hide' if @show_add_field.present? %>" >
         <%= t(:provide_translation) %>
         <span class="translation_lang_selected"></span>
       </div>
-      <%# render :partial => "form_section/add_translations", :locals => {:fields => fields, :fld => fld, :show_drop_down => @show_add_field.present? }%>
+      <%= render :partial => "form_section/add_translations", :locals => {:fields => fields, :fld => fld, :show_drop_down => @show_add_field.present? }%>
     </div>
 
     <div class="clearfix"></div>
