--- a/app/views/form_section/_fields.html.erb
+++ b/app/views/form_section/_fields.html.erb
@@ -1,5 +1,6 @@
 <%
   lookups ||= []
+  is_translation ||= false
 %>
 <fieldset>
   <% fields.each do |field_hash| %>
@@ -8,9 +9,9 @@
       field_type = field_hash.values.first
     %>
     <% if field_type == :select_box %>
-      <%= render "form_section/add_select_box", lookups: lookups, fld: fld %>
+      <%= render "form_section/add_select_box", lookups: lookups, fld: fld unless is_translation %>
     <% elsif field_type == :tally_field %>
-      <%= render "form_section/add_tally_field" %>
+      <%= render "form_section/add_tally_field" unless is_translation %>
     <% else %>
       <div class="row">
         <div class="large-3 medium-3 columns">
