--- a/app/views/form_section/_field_display_subform.html.erb
+++ b/app/views/form_section/_field_display_subform.html.erb
@@ -2,8 +2,10 @@
   <%
      subform = field
      subform_section = field.subform_section
+     shared_subform_section = FormSection.get_by_unique_id subform_section.shared_subform
+     shared_subform_section_group = subform_section.shared_subform_group
      number_of_subforms = subforms_count formObject, subform, form_group_name
-     subform_object = get_subform_object formObject, subform_section, form_group_name
+     subform_object = get_subform_object(formObject, subform_section, form_group_name) || get_subform_object(formObject, shared_subform_section, shared_subform_section_group)
      collapsed_fields = subform_section.collapsed_list
   %>
   <div class="subforms">
