--- a/app/views/form_section/_subform.html.erb
+++ b/app/views/form_section/_subform.html.erb
@@ -67,8 +67,8 @@
   <div>
     <a id="subform_<%= subform.name %>_add_button" class="green-button subform_add right"><%= t('fields.add') %></a>
   </div>
-  <%initial_subforms = subform_section[:initial_subforms] || 0%>
-  <% if initial_subforms > 0 && formObject.new_record? %>
+  <% initial_subforms = subform_section[:initial_subforms] || 0 %>
+  <% if initial_subforms > 0 && formObject.new_record? && !formObject.errors.any? %>
     <% subform_section[:initial_subforms].times do %>
       <script>
         $(document).ready(function(){
