--- a/app/views/lookups/_form.html.erb
+++ b/app/views/lookups/_form.html.erb
@@ -27,26 +27,19 @@
           <div class="medium-3 columns">
             <%= f.label :lookup_values, t("lookup.values"), :class => "key" %>
           </div>
+          <div class="medium-9 columns"></div>
         </div>
-        <div class="medium-9 columns"></div>
-        <div class="row">
-          <div class="medium-3 columns"></div>
-          <div class="medium-9 columns">
-            <%= text_field_tag 'lookup[lookup_values][], @lookup.lookup_values[0]' %>
-          </div>
+        <div id="lookup_values">
+          <% if @lookup.lookup_values.present? %>
+            <%= render :partial => 'lookups/lookup_value', :collection => @lookup.lookup_values%>
+          <% else %>
+            <%= render 'lookups/lookup_value', lookup_value: "" %>
+          <% end %>
         </div>
-        <div class="row">
-          <div class="medium-3 columns"></div>
-          <div class="medium-9 columns">
-            <%= text_field_tag 'lookup[lookup_values][], @lookup.lookup_values[1]' %>
-          </div>
+        <%# Add button %>
+        <div>
+          <a id="lookup_values_add_button" class="green-button lookup_value_add right"><%= t('lookup.add_value') %></a>
         </div>
-        <div class="row">
-          <div class="medium-3 columns"></div>
-          <div class="medium-9 columns">
-            <%= text_field_tag 'lookup[lookup_values][], @lookup.lookup_values[2]' %>
-          </div>
-        </div>        
       </fieldset>
     <% end %>
   </div>
