fixed update lookups

--- a/app/views/lookups/_form.html.erb
+++ b/app/views/lookups/_form.html.erb
@@ -34,6 +34,7 @@
             <%= render :partial => 'lookups/lookup_value', :collection => @lookup.lookup_values%>
           <% else %>
             <%= render 'lookups/lookup_value', lookup_value: "" %>
+            <%= render 'lookups/lookup_value', lookup_value: "" %>
           <% end %>
         </div>
         <%# Add button %>
