--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,9 +10,9 @@
   <%= t("users.manage") %>
 <% end %>
 
-<% content_for :record_sub_nav do %>
-  <%= link_to t("buttons.back"), :back, class: 'btn grey-button' %>
-<% end %>
+<%# content_for :record_sub_nav do %>
+  <%#= link_to t("buttons.back"), :back, class: 'btn grey-button' %>
+<%# end %>
 
 <div class="page-content-new row collapse" data-equalizer>
   <div class="large-4 medium-4 columns close-side-tab side-tab-container">
